--- a/src/views/home/home.scss
+++ b/src/views/home/home.scss
@@ -1,5 +1,7 @@
 @import "base";
-
+@function trem($px) {
+  @return ($px / 75) * 1rem;
+}
 .home-wp {
   position: relative;
   width: 100%;
@@ -44,18 +46,33 @@
     left: 0;
     bottom: (53 / 75) * 1rem;
     width: 100%;
-    height: (162 / 75) * 1rem;
-    text-align: center;
+    height: auto;
+    // text-align: center;
+    display: flex;
+    justify-content: space-around;
+    top: (1050 / 75) * 1rem;
 
     .home-myletter {
-      width: (360 / 75) * 1rem;
-      height: (162 / 75) * 1rem;
+      width: (280 / 75) * 1rem;
+      height: (106 / 75) * 1rem;
       vertical-align: middle;
       outline: none;
       overflow: hidden;
       background-image: url("../../assets/images/shouye_myLetter.png");
+      background-repeat: no-repeat;
       background-size: contain;
-      margin:0 auto;
+      background-position: bottom center;
+    }
+    .home-collect{
+      width: (280 / 75) * 1rem;
+      height: (106 / 75) * 1rem;
+      vertical-align: middle;
+      outline: none;
+      overflow: hidden;
+      background-image: url("../../assets/images/shouye_collect.png");
+      background-repeat: no-repeat;
+      background-position: bottom center;
+      background-size: contain;
     }
   }
 
@@ -86,6 +103,66 @@
 
   .share-tips {
     z-index: 10;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: (140 / 75) * 1rem;
+    height: (50 / 75) * 1rem;
+    margin-top: - (25 / 75) * 1rem;
+    margin-left: - (70 / 75) * 1rem;
+    font-size: (26 / 75) * 1rem;
+    color: #fff;
+    line-height: (50 / 75) * 1rem;
+    text-align: center;
+    border-radius: (6 / 75) * 1rem;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+  .share-first-letter{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 11;
+    padding-top: trem(214);
+    .first-close{
+      background-image: url(../../assets/images/icon_close.png);
+      background-size: contain;
+      background-repeat: no-repeat;
+      width: trem(74);
+      height: trem(74);
+      position: absolute;
+      top: trem(100);
+      right: trem(54);
+    }
+    .first-mail{
+      background-image: url(../../assets/images/icon_letter.gif);
+      background-size: contain;
+      background-repeat: no-repeat;
+      width: trem(690);
+      height: trem(480);
+      margin: 0 auto;
+    }
+    .first-text{
+      background-image: url(../../assets/images/text_new_letter.png);
+      background-size: contain;
+      background-repeat: no-repeat;
+      width: trem(264);
+      height: trem(76);
+      margin: 0 auto;
+    }
+    .go-first-letter{
+      background-image: url(../../assets/images/btn_go_letter.png);
+      background-size: contain;
+      background-repeat: no-repeat;
+      width: trem(274);
+      height: trem(86);
+      margin: trem(76) auto;
+    }
+  }
+  .tips-text{
+    z-index: 999;
     position: absolute;
     left: 50%;
     top: 50%;
