--- a/src/views/home/home.scss
+++ b/src/views/home/home.scss
@@ -50,7 +50,7 @@
     // text-align: center;
     display: flex;
     justify-content: space-around;
-    top: (1050 / 75) * 1rem;
+    bottom: (50 / 75) * 1rem;
 
     .home-myletter {
       width: (280 / 75) * 1rem;
