--- a/src/views/myLoveLetter/myLoveLetter.scss
+++ b/src/views/myLoveLetter/myLoveLetter.scss
@@ -1,5 +1,7 @@
 @import "base";
-
+@function trem($px) {
+  @return ($px / 75) * 1rem;
+}
 .myLoveLetter-wp {
   position: relative;
   width: 100%;
@@ -193,44 +195,58 @@
       position: relative;
       width: 100%;
       height: 100%;
-      background: url("../../assets/images/key_bg.png") no-repeat;
+      // background: url("../../assets/images/key_bg.png") no-repeat;
       background-size: contain;
       background-position: top center;
+      padding-top: trem(216);
+
+      .qrcode{
+        width: trem(214);
+        height: auto;
+        display: block;
+        margin: 0 auto;
+      }
 
       .qrcode-wp {
         position: relative;
-        padding-top: (268 / 75) * 1rem;
+        padding-top: trem(56);
         text-align: center;
-
-        .qr-img {
-          width: (210 / 75) * 1rem;
-          height: (210 / 75) * 1rem;
-          vertical-align: middle;
-          outline: none;
-          overflow: hidden;
-        }
+        background-image: url(../../assets/images/bg_code.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        margin: 0 auto;
+        width: trem(576);
+        height: trem(716);
       }
 
       .keys-close {
-        display: inline-block;
+        // display: inline-block;
+        // position: absolute;
+        // top: (108 / 75) * 1rem;
+        // right: (55 / 75) * 1rem;
+        // width: (70 / 75) * 1rem;
+        // height: (70 / 75) * 1rem;
+        // text-decoration: none;
+        // cursor: pointer;
         position: absolute;
-        top: (108 / 75) * 1rem;
-        right: (55 / 75) * 1rem;
-        width: (70 / 75) * 1rem;
-        height: (70 / 75) * 1rem;
-        text-decoration: none;
-        cursor: pointer;
+        width: trem(75);
+        height: trem(75);
+        background-image: url(../../assets/images/icon_close.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        top: trem(100);
+        right: trem(55);
       }
 
       .btn-fuzhi {
-        display: inline-block;
-        position: absolute;
-        left: (250 / 75) * 1rem;
-        top: (809 / 75) * 1rem;
-        width: (251 / 75) * 1rem;
-        height: (88 / 75) * 1rem;
+        position: relative;
+        background-image: url(../../assets/images/btn_code.png);
+        background-repeat: no-repeat;
+        background-size: contain;
         text-decoration: none;
-        cursor: pointer;
+        width: trem(278);
+        height: trem(86);
+        margin: trem(330) auto 0;
       }
     }
   }
