--- a/src/views/sendOut/sendOut.scss
+++ b/src/views/sendOut/sendOut.scss
@@ -1,5 +1,7 @@
 @import "base";
-
+@function trem($px) {
+  @return ($px / 75) * 1rem;
+}
 .sendOut-wp {
   position: relative;
   width: 100%;
@@ -66,13 +68,13 @@
       cursor: pointer;
 
       &.write-again {
-        background: url("../../assets/images/write-again.png") no-repeat;
+        background: url("../../assets/images/btn_my_letter.png") no-repeat;
         background-size: contain;
         background-position: center center;
       }
 
       &.return-home {
-        background: url("../../assets/images/return_home.png") no-repeat;
+        background: url("../../assets/images/btn_get_letter.png") no-repeat;
         background-size: contain;
         background-position: center center;
       }
@@ -86,6 +88,22 @@
     .logo-img {
       width: (144 / 75) * 1rem;
       height: (60 / 75) * 1rem;
+      vertical-align: middle;
+      outline: none;
+      overflow: hidden;
+    }
+  }
+  .share-cont {
+    z-index: 999;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+
+    .share-img {
+      width: 100%;
       vertical-align: middle;
       outline: none;
       overflow: hidden;
