--- a/src/views/watchMovie/watchMovie.scss
+++ b/src/views/watchMovie/watchMovie.scss
@@ -241,7 +241,8 @@
       width: (626 / 75) * 1rem;
       height: (994 / 75) * 1rem;
       margin: 0 auto;
-      background: url("../../assets/images/ticket.png") no-repeat;
+      // background: url("../../assets/images/ticket.png") no-repeat;
+      background-repeat: no-repeat;
       background-size: contain;
       background-position: top center;
 
