--- a/src/views/write/write.scss
+++ b/src/views/write/write.scss
@@ -75,6 +75,14 @@
       background: transparent;
       // font-family: HandBook;
     }
+    .placeHolder{
+      font-size: (30 /75) * 1rem;
+      color: #4a4a4a;
+      position: absolute;
+      text-align: center;
+      width: 100%;
+      top: 45%;
+    }
   }
 
   .btns-wp {
